--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ platform:
 
 steps:
   - name: lint
-    image: golangci/golangci-lint:v1.39.0
+    image: golangci/golangci-lint:v1.41.1
     commands:
       - golangci-lint run --no-config -v --timeout 10m ./...
 
@@ -18,12 +18,11 @@ steps:
     settings:
       repo: registry.megpoid.xyz/codestation/drone-kaniko
       tags: latest
-      mirror: http://mirror:5000
       build_args:
-        - CI_COMMIT_TAG=${DRONE_TAG}
-        - CI_COMMIT_BRANCH=${DRONE_BRANCH}
-        - CI_COMMIT_SHA=${DRONE_COMMIT_SHA}
-        - CI_PIPELINE_CREATED_AT=${DRONE_BUILD_CREATED}
+        - CI_TAG=${DRONE_TAG}
+        - BUILD_NUMBER=${DRONE_BUILD_NUMBER}
+        - BUILD_COMMIT_SHORT=${DRONE_COMMIT_SHA:0:8}
+        - CI_BUILD_CREATED=${DRONE_BUILD_CREATED}
       registry: registry.megpoid.xyz
       username:
         from_secret: docker_username
