--- a/.drone.yml
+++ b/.drone.yml
@@ -9,25 +9,25 @@ platform:
 
 steps:
   - name: lint
-    image: golangci/golangci-lint:v1.41.1
+    image: golangci/golangci-lint:v1.43.0
     commands:
       - golangci-lint run --no-config -v --timeout 10m ./...
 
   - name: build
-    image: plugins/docker
+    image: codestation/drone-docker
     settings:
       repo: registry.megpoid.xyz/codestation/drone-kaniko
       tags: latest
-      build_args:
-        - CI_TAG=${DRONE_TAG}
-        - BUILD_NUMBER=${DRONE_BUILD_NUMBER}
-        - BUILD_COMMIT_SHORT=${DRONE_COMMIT_SHA:0:8}
-        - CI_BUILD_CREATED=${DRONE_BUILD_CREATED}
       registry: registry.megpoid.xyz
       username:
         from_secret: docker_username
       password:
         from_secret: docker_password
+      build_args:
+        - CI_COMMIT_TAG=${DRONE_TAG}
+        - CI_COMMIT_BRANCH=${DRONE_BRANCH}
+        - CI_COMMIT_SHA=${DRONE_COMMIT_SHA}
+        - CI_PIPELINE_CREATED_AT=${DRONE_BUILD_CREATED}
     when:
       event:
         - push
