fix docker config creation

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,3 +1,7 @@
 FROM gcr.io/kaniko-project/executor:v1.7.0-debug AS kaniko
 FROM golang:1.17
-COPY --from=kaniko /kaniko/executor /kaniko/warmer /kaniko/
+
+WORKDIR /workspace
+ENV DOCKER_CONFIG=/kaniko/.docker/
+
+COPY --from=kaniko /kaniko /kaniko/
