build: fix build args

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -43,7 +43,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           labels: ${{ steps.meta.outputs.labels }}
-          build_args: |
+          build-args: |
             ARG CI_COMMIT_TAG=${{ github.ref_name }}
             ARG CI_COMMIT_SHA=${{ github.sha }}
             ARG CI_PIPELINE_CREATED_AT=${{ steps.date.outputs.timestamp }}
