--- a/.drone.yml
+++ b/.drone.yml
@@ -1,33 +1,37 @@
 ---
 kind: pipeline
-name: linux-amd64
+name: default
 type: docker
 
 platform:
   os: linux
-  arch: amd64
+  arch: arm64
 
 steps:
   - name: lint
-    image: golangci/golangci-lint:v1.43.0
+    image: golangci/golangci-lint:v1.55.2
     commands:
       - golangci-lint run --no-config -v --timeout 10m ./...
 
   - name: build
-    image: codestation/drone-docker
+    image: ghcr.io/codestation/drone-docker
     settings:
-      repo: registry.megpoid.xyz/codestation/drone-kaniko
+      repo: ghcr.io/codestation/drone-kaniko
       tags: latest
-      registry: registry.megpoid.xyz
+      registry: registry.megpoid.dev
+      config:
+        from_secret: regcreds
       username:
         from_secret: docker_username
       password:
         from_secret: docker_password
       build_args:
         - CI_COMMIT_TAG=${DRONE_TAG}
-        - CI_COMMIT_BRANCH=${DRONE_BRANCH}
-        - CI_COMMIT_SHA=${DRONE_COMMIT_SHA}
-        - CI_PIPELINE_CREATED_AT=${DRONE_BUILD_CREATED}
+      build_args_from_env:
+        - goproxy
+      environment:
+        goproxy:
+          from_secret: goproxy_url
     when:
       event:
         - push
