--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,5 @@
-FROM gcr.io/kaniko-project/executor:v1.6.0-debug AS kaniko
-FROM golang:1.17
+FROM gcr.io/kaniko-project/executor:v1.18.0-debug AS kaniko
+FROM golang:1.21-alpine
 
 WORKDIR /workspace
 ENV DOCKER_CONFIG=/kaniko/.docker/
