add manifest support

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,18 @@
 FROM gcr.io/kaniko-project/executor:v1.18.0-debug AS kaniko
 FROM golang:1.21-alpine
 
-WORKDIR /workspace
-ENV DOCKER_CONFIG=/kaniko/.docker/
+RUN apk add --no-cache gcompat
 
-COPY --from=kaniko /kaniko /kaniko/
+COPY --from=kaniko /kaniko /kaniko
+COPY --from=kaniko /busybox /busybox
+
+RUN mkdir /workspace
+
+ENV HOME /root
+ENV USER root
+ENV DOCKER_CONFIG /kaniko/.docker/
+ENV SSL_CERT_DIR=/kaniko/ssl/certs
+ENV DOCKER_CREDENTIAL_GCR_CONFIG /kaniko/.config/gcloud/docker_credential_gcr_config.json
+ENV PATH /usr/local/bin:/kaniko:/busybox
+
+WORKDIR /workspace
