--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -47,4 +47,5 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            CI_COMMIT_SHA=${{ github.sha }}
+            BUILDKIT_CONTEXT_KEEP_GIT_DIR=true
+            CI_COMMIT_TAG=${{ github.ref_name }}
