--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,7 @@
 ---
 kind: pipeline
 name: default
-type: docker
+type: kubernetes
 
 platform:
   os: linux
@@ -9,12 +9,12 @@ platform:
 
 steps:
   - name: lint
-    image: golangci/golangci-lint:v1.55.2
+    image: golangci/golangci-lint:v1.57.2
     commands:
       - golangci-lint run --no-config -v --timeout 10m ./...
 
   - name: build
-    image: ghcr.io/codestation/drone-docker
+    image: ghcr.io/codestation/drone-kaniko
     settings:
       repo: registry.megpoid.dev/codestation/drone-kaniko
       tags: latest
