--- a/.drone.yml
+++ b/.drone.yml
@@ -14,17 +14,13 @@ steps:
       - golangci-lint run --no-config -v --timeout 10m ./...
 
   - name: build
-    image: ghcr.io/codestation/drone-kaniko
+    image: ghcr.io/codestation/drone-docker
     settings:
       repo: registry.megpoid.dev/codestation/drone-kaniko
       tags: latest
       registry: registry.megpoid.dev
       config:
-        from_secret: regcreds
-      username:
-        from_secret: docker_username
-      password:
-        from_secret: docker_password
+        from_secret: registry_credentials
       build_args:
         - CI_COMMIT_TAG=${DRONE_TAG}
       build_args_from_env:
